fixed the buttons alignement in small screens for post.

--- a/src/pages/plastic/post.css
+++ b/src/pages/plastic/post.css
@@ -521,4 +521,11 @@
     .post-title {
         font-size: 1.125rem;
     }
+
+    .post-footer .contact-button,
+    .post-footer .save-button,
+    .post-footer .approve-post-button {
+        width: 100%;
+        max-width: 100%;
+    }
 }
